--- a/COLTEXT-FRONT/CSS/stylesheet.css
+++ b/COLTEXT-FRONT/CSS/stylesheet.css
@@ -1,14 +1,19 @@
 /* Contenedor cuadrado de contenido */
-.container {
+.container1 {
     display: flex;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    border: 1px solid #ccc;
+    padding: 20px;
+    height: auto; /* Esto centra verticalmente en la página */
     background-color: #e9e3bb;
     font-family: 'Montserrat';font-size: 22px;
+    width: auto;
+    border-radius: 20px;
 }
 /* formato principal de títulos */
-.titlefont{
+.titlefont {
     font-family: 'DM Serif Display';
     font-size: 72px;
     margin: 0;
@@ -21,6 +26,17 @@
     align-items: center;
     background-color: #042212;
     padding: 10px;
+}
+.banner2 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #e9e3bb;
+    padding: 10px;
+    font-family: 'DM Serif Display';
+    font-size: 20px;
+    margin: 0;
+    color: #a57512;
 }
 /* Contenedor cuadrado de contenido para errores */
 .error-body {
@@ -69,4 +85,44 @@
     width: 600px; /* Ancho deseado */
     height: auto; /* Altura deseada */
 }
-
+/* agrega una imagen a un elemento seleccionado */
+.add{
+    background-image: url('C:/Users/Sena/Downloads/Diseño Web clase 6/COLTEXT-FRONT/COLTEXT-FRONT/multimedia/1 sin fondo.png');
+}
+.btn1{
+    background-image:url('C:/Users/Sena/Downloads/Diseño Web clase 6/COLTEXT-FRONT/COLTEXT-FRONT/multimedia/1 sin fondo.png');
+    background-repeat:no-repeat;
+    height:60px;
+    width:70px;
+    background-size: 50px 50px;
+    background-position:center;
+}
+.btn2{
+    background-image:url('C:/Users/Sena/Downloads/Diseño Web clase 6/COLTEXT-FRONT/COLTEXT-FRONT/multimedia/icono-campana.png');
+    background-repeat:no-repeat;
+    height:60px;
+    width:70px;
+    background-size: 50px 50px;
+    background-position:center;
+}
+.btn3{
+    background-image:url('C:/Users/Sena/Downloads/Diseño Web clase 6/COLTEXT-FRONT/COLTEXT-FRONT/multimedia/usuario-icono.png');
+    background-repeat:no-repeat;
+    height:60px;
+    width:70px;
+    background-size: 50px 50px;
+    background-position:center;
+}
+.padre {
+    /* Codigo para centrar*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    /* Fin del codigo para centrar*/
+}
+.divider{
+    padding: 20px;
+    height: 10vh; /* Esto centra verticalmente en la página */
+    background-color: white;
+}
