--- a/COLTEXT-FRONT/CSS/stylesheet.css
+++ b/COLTEXT-FRONT/CSS/stylesheet.css
@@ -11,6 +11,7 @@
     font-family: 'Montserrat';font-size: 22px;
     width: auto;
     border-radius: 20px;
+    box-shadow: 0 20px 35px rgba(0, 0, 0, 0.444);
 }
 .container2 {
     border: 1px solid #ccc;
