commit de actualizacion

--- a/COLTEXT-FRONT/CSS/stylesheet.css
+++ b/COLTEXT-FRONT/CSS/stylesheet.css
@@ -174,7 +174,7 @@ nav .fas{
     margin-left: 10px;
 }
 a:hover{
-    background: #eee;
+    background: #a57512;
 }
 .logout{
     position: absolute;
